--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -458,7 +458,7 @@ interfaces:
       watchdog_feed:
         doc: Feed the watchdog to prevent watchdog timeouts.
       clear_errors:
-        doc: Check the watchdog timer for expiration. Also sets the watchdog error bit if expired.
+        doc: Clear all the errors of this axis including all contained submodules.
 
   ODrive.Axis.LockinConfig:
     c_is_class: False
