Moved thermistors from belonging to Axis to being a part of Motor. Thermistor apply_config now called in Motor::apply_config() Thermistor errors rolled into motor errors odrivetool and GUI updated to handle change Removed CurrentLimiter,Thermistor arrays abstraction

--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -355,7 +355,7 @@ interfaces:
             bit: 17
             doc: the min endstop was not enabled during homing
           OverTemp:
-            doc: Check `fet_thermistor.error` and `motor_thermistor.error` for more information.
+            doc: Check `motor.error` for more details.
       step_dir_active: readonly bool
       current_state: readonly AxisState
       requested_state: AxisState
@@ -444,8 +444,6 @@ interfaces:
             # status_reg_2: readonly uint32
             # ctrl_reg_1: readonly uint32
             # ctrl_reg_2: readonly uint32
-      fet_thermistor: OnboardThermistorCurrentLimiter
-      motor_thermistor: OffboardThermistorCurrentLimiter
       motor: Motor
       controller: Controller
       encoder: Encoder
@@ -491,7 +489,6 @@ interfaces:
   ODrive.OnboardThermistorCurrentLimiter:
     c_is_class: True
     attributes:
-      error: ThermistorCurrentLimiter.Error
       temperature: readonly float32
       config:
         c_is_class: False
@@ -507,7 +504,6 @@ interfaces:
   ODrive.OffboardThermistorCurrentLimiter:
     c_is_class: True
     attributes:
-      error: ThermistorCurrentLimiter.Error
       temperature: readonly float32
       config:
         c_is_class: False
@@ -605,6 +601,8 @@ interfaces:
           DcBusOverRegenCurrent: {doc: too much current pushed into the power supply}
           DcBusOverCurrent: {doc: too much current pulled out of the power supply}
           ModulationIsNan:
+          MotorThermistorOverTemp: {doc: The motor thermistor measured a temperature above motor.motor_thermistor.config.temp_limit_upper}
+          FetThermistorOverTemp: {doc: The inverter thermistor measured a temperature above motor.fet_thermistor.config.temp_limit_upper}
       armed_state:
         typeargs: {fibre.Property.mode: readonly}
         values:
@@ -619,6 +617,8 @@ interfaces:
       DC_calib_phC: {type: float32, c_name: DC_calib_.phC}
       phase_current_rev_gain: float32
       effective_current_lim: readonly float32
+      fet_thermistor: OnboardThermistorCurrentLimiter
+      motor_thermistor: OffboardThermistorCurrentLimiter
       current_control:
         c_is_class: False
         attributes:
@@ -1019,12 +1019,6 @@ valuetypes:
         brief: Run axis homing function.
         doc:
           Endstops must be enabled to use this feature.
-
-  ODrive.ThermistorCurrentLimiter.Error:
-    nullflag: None
-    flags:
-      OverTemp:
-        doc: The thermistor temperature upper limit was exceeded. 
 
   ODrive.Encoder.Mode:
     values:
