--- a/tools/test-rig-rpi.yaml
+++ b/tools/test-rig-rpi.yaml
@@ -23,13 +23,9 @@ components:
       - {type: gpio, num: 20}
       - {type: gpio, num: 26}
 
-#  - type: programmer
-#    name: The Blue STLink/v2
-#    id: '\x53\x3f\x75\x06\x49\x3f\x49\x51\x44\x54\x19\x3f'
-
   - type: odrive
     name: odrive
-    board-version: v3.6-58V
+    board-version: v3.6-56V
     serial-number: "20703595524B"
     brake-resistance: 2.0
     usb: auto
@@ -56,8 +52,9 @@ components:
     cpr: 8192
     max-rpm: 7000
 
-  - type: teensy
+  - type: arduino
     name: teensy
+    board-version: teensy:avr:teensy40
 
   - {type: lpf, name: lpf0}
   - {type: lpf, name: lpf1}
