Addressed PR comments Updated API Migration Notes Changed Axis error that is thrown for over temp from ERROR_OVER_TEMP to ERROR_MOTOR_FAILED Moved setting of thermistor_.motor_ = this from motor apply_config() to motor constructor Moved motor_thermistor apply_config call from Motor to config_apply_all() in main.cpp

--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -355,6 +355,7 @@ interfaces:
             bit: 17
             doc: the min endstop was not enabled during homing
           OverTemp:
+            # unused
             doc: Check `motor.error` for more details.
       step_dir_active: readonly bool
       current_state: readonly AxisState
