--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -889,9 +889,9 @@ interfaces:
           abs_spi_cs_gpio_pin: {type: uint16, c_setter: set_abs_spi_cs_gpio_pin, doc: Make sure that the GPIO is in `GPIO_MODE_DIGITAL`.}
           zero_count_on_find_idx: bool
           cpr: int32
-          offset: int32
+          phase_offset: int32
+          phase_offset_float: float32
           pre_calibrated: {type: bool, c_setter: set_pre_calibrated}
-          offset_float: float32
           enable_phase_interpolation: bool
           bandwidth: {type: float32, c_setter: set_bandwidth}
           calib_range: float32
