--- a/Firmware/odrive-interface.yaml
+++ b/Firmware/odrive-interface.yaml
@@ -896,6 +896,18 @@ interfaces:
               calib_vel_threshold: float32
               cogging_ratio: readonly float32
               anticogging_enabled: bool
+      autotuning:
+        c_is_class: False
+        attributes:
+          pos_amplitude: float32
+          pos_frequency: float32
+          pos_phase: float32
+          vel_amplitude: float32
+          vel_frequency: float32
+          vel_phase: float32
+          torque_amplitude: float32
+          torque_frequency: float32
+          torque_phase: float32
     functions:
       move_incremental:
         doc: Moves the axes' goal point by a specified increment.
@@ -1347,6 +1359,12 @@ valuetypes:
 
           ### Valid Control modes
           * `CONTROL_MODE_POSITION_CONTROL`
+      Tuning:
+        brief: Implements a tuning mode
+        doc: |
+          Used for tuning your odrive, this mode allows the user to set different frequencies.
+          Set control_mode for the loop you want to tune, then set the frequency desired.
+          The ODrive will send a 1 turn amplitude sine wave to the controller with the given frequency and phase.
 
   ODrive.Motor.MotorType:
     values:
