--- a/GUI/package.json
+++ b/GUI/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "electron:build": "electron-icon-builder --input=./public/icon.png --output=build --flatten && vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
+    "electron:serve": "cp node_modules/usb/build/Release/usb_bindings.node dist_electron/usb_bindings.node && vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "electron:generate-icons": "electron-icon-builder --input=./public/icon.png --output=build --flatten"
@@ -17,7 +17,7 @@
     "chart.js": "^2.9.3",
     "chartjs-plugin-streaming": "^1.8.0",
     "core-js": "^3.6.5",
-    "electron": "^9.1.1",
+    "electron-builder": "^22.9.1",
     "file-saver": "^2.0.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
@@ -38,15 +38,18 @@
     "@vue/cli-plugin-router": "^4.4.6",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
-    "electron": "^9.0.0",
+    "electron": "^10.1.5",
     "electron-devtools-installer": "^3.1.0",
     "electron-icon-builder": "^1.0.2",
+    "electron-rebuild": "^2.3.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "file-loader": "^6.1.0",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.4",
     "vue-cli-plugin-yaml": "^1.0.2",
     "vue-json-component": "^0.4.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webusb": "2.1.0"
   },
   "eslintConfig": {
     "root": true,
