Changed from standard node-usb to a patch that supports our version of electron. Fibre appears to be running correctly and there are no issues when `require`-ing the webusb polyfill. usb.showdialog doesn't exist for the polyfill, so that is the next step.

--- a/GUI/package.json
+++ b/GUI/package.json
@@ -14,28 +14,31 @@
   },
   "main": "background.js",
   "dependencies": {
-    "chart.js": "^2.9.3",
+    "chart.js": "^2.9.4",
     "chartjs-plugin-streaming": "^1.8.0",
-    "core-js": "^3.6.5",
+    "core-js": "^3.7.0",
     "electron-builder": "^22.9.1",
     "file-saver": "^2.0.2",
+    "node-abi": "^2.19.1",
+    "node-gyp": "^7.1.2",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
+    "socket.io-client": "^2.3.1",
     "typeface-roboto": "0.0.75",
-    "uuid": "^8.2.0",
-    "vue": "^2.6.11",
-    "vue-chartjs": "^3.5.0",
+    "usb": "github:NoahAndrews/node-usb#patch-1",
+    "uuid": "^8.3.1",
+    "vue": "^2.6.12",
+    "vue-chartjs": "^3.5.1",
     "vue-context": "^5.2.0",
     "vue-directive-tooltip": "^1.6.3",
     "vue-json-component": "^0.4.1",
-    "vue-slider-component": "^3.2.2",
-    "vue-socket.io": "^3.0.9",
+    "vue-slider-component": "^3.2.10",
+    "vue-socket.io": "^3.0.10",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-plugin-router": "^4.4.6",
+    "@vue/cli-plugin-router": "^4.5.8",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
     "electron": "^10.1.5",
@@ -45,10 +48,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "file-loader": "^6.1.0",
-    "vue-cli-plugin-electron-builder": "~2.0.0-rc.4",
+    "vue-cli-plugin-electron-builder": "^2.0.0-rc.5",
     "vue-cli-plugin-yaml": "^1.0.2",
     "vue-json-component": "^0.4.1",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.6.12",
     "webusb": "2.1.0"
   },
   "eslintConfig": {
