--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -16,7 +16,11 @@ jobs:
     steps:
       - name: Install odrivetool
         run: |
-          pip3 install monotonic # TODO: this is dishonest. Must be removed as soon as v0.5.0 is published!
+          # TODO: this is a workaround for https://github.com/pypa/setuptools/issues/2353 and we
+          # can remove it as soon as python3-setuptools on GitHub's ubuntu-latest
+          # moves to version 50.1+.
+          pip3 list | grep setuptools # show version
+          export SETUPTOOLS_USE_DISTUTILS=stdlib
           pip3 install odrive
 
       # This one currently fails because Github Actions runs pip as non-root
@@ -27,7 +31,7 @@ jobs:
       # This step is mentioned in the user guide
       - name: Add ~/.local/bin to path
         if: matrix.os == 'ubuntu-latest'
-        run: echo "::add-path::~/.local/bin"
+        run: echo "~/.local/bin" >> $GITHUB_PATH
 
       - name: Launch odrivetool
         # This returns a non-zero exit code if the odrivetool throws an exception
