update testing framework  - introduce TestFixture to simplify initialization of the test rig  - add utils to simplify writing closed loop control tests

--- a/tools/test-rig-pj.yaml
+++ b/tools/test-rig-pj.yaml
@@ -89,8 +89,8 @@ connections:
   - ['teensy.gpio3', 'odrive.spi.mosi']
   - ['teensy.gpio4', 'odrive.spi.miso']
   - ['teensy.gpio5', 'odrive.spi.sck']
-  - ['odrive.axis0', 'D5065-270KV_0']
-  - ['D5065-270KV_0', 'real_encoder']
+  - ['odrive.axis0', 'D5065-270KV_0.phases']
+  - ['D5065-270KV_0.shaft', 'real_encoder.shaft']
   - ['odrive.gpio3', 'lpf0']
   - ['odrive.gpio4', 'lpf1']
   - ['lpf0.en', 'lpf1.en', 'rpi.gpio16']
