--- a/tools/test-rig-ss4.yaml
+++ b/tools/test-rig-ss4.yaml
@@ -86,8 +86,8 @@ connections:
   - ['teensy.gpio23', 'real_encoder.b']
   - ['teensy.gpio22', 'real_encoder.a']
   - ['teensy.gpio21', 'real_encoder.z']
-  - ['odrive.axis0', 'D5065-270KV_0']
-  - ['D5065-270KV_0', 'real_encoder']
+  - ['odrive.axis0', 'D5065-270KV_0.phases']
+  - ['D5065-270KV_0.shaft', 'real_encoder.shaft']
 
   - ['odrive.encoder0.a', 'odrive.gpio0']
   - ['odrive.encoder0.b', 'odrive.gpio5']
